<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_intro_title"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_intro_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_usage_title"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_usage_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_deroulement_title"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_deroulement_content_1" />
    </LinearLayout>

</ScrollView>